--- a/po/mk/kghostview.po
+++ b/po/mk/kghostview.po
@@ -1,18 +1,17 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# kghostview
+# Copyright (C) 1998 Free Software Foundation, Inc.
+# Vlatko Cingoski <vlatko@eml.hiroshima-u.ac.jp>, 1998
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-01-05 22:02+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Macedonian <LL@li.org>\n"
+"Project-Id-Version: kedit\n"
+"POT-Creation-Date: 1998-01-17 07:40+0100\n"
+"PO-Revision-Date: 1998-05-17 20:00-0500-\n"
+"Last-Translator: Vlatko Cingoski <vlatko@eml.hiroshima-u.ac.jp>\n"
+"Language-Team: Macedonian\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: iso-8859-5\n"
+"Content-Type: text/plain; charset=iso-8859-5\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: copyright.cpp:28
 msgid "Copyright"
